[Hero image] Fix: Gap between bio and hero image

--- a/style/style.css
+++ b/style/style.css
@@ -81,14 +81,16 @@ body {
 /* =================================== BIO START ===================================*/
 .container {
   display: flex;
+  gap: 5em;
   /* flex-wrap: wrap; */
-  justify-content: space-between;
+  /* justify-content: space-evenly; */
   /* align-items: center; */
 }
 
 .bio {
   color: var(--text);
-  flex-grow: 2;
+  /* flex-grow: 2; */
+  width: 60%;
 }
 
 .hi {
@@ -100,7 +102,7 @@ body {
 
 .name {
   margin-top: 30px;
-  width: 100%;
+  width: 65%;
   transition: 0.3s ease-in-out;
   font-size: 60px;
   background: linear-gradient(var(--primary), var(--secondary));
@@ -178,12 +180,12 @@ body {
   width: 100%;
 }
 
-.hero {
+/* .hero {
   display: flex;
   align-items: center;
   justify-content: center;
   width: 100%;
-}
+} */
 
 .me {
   height: 20em;
